# language_learning_flashcards_creator

./: .gitignore  pyproject.toml
deck_generation/: constants.py  utils.py
deck_generation/data_generation/: anki_deck_generator.py  kokoro_sentence_audio_generator.py  note_models.py  sentence_filterer.py
tests/: test_pass.py
